# RiboHMM

./: README.md  __init__.py  bam_to_tbi.py  bam_to_tbi_old.py  combined.py  construct_synthetic_footprints.py  func_tests.py  infer_CDS.py  learn_model.py  load_data.py  plot_model.py  pyproject.toml  ribohmm.py  ribohmm_cython_build.py  ribohmm_pure.py  rmse.md  seq_pure.py  setup.py  test.md  utils.py
_cmds/: mappability_compute.py  mappability_generate.py
contrib/: load_data.py
core/: infer_CDS.py  learn_model.py  ribohmm.py  seq.py
ribohmm/: __init__.py  _debug.py  utils.py
ribohmm/_cmds/: _main.py  bam_to_counts.py  infer.py  infer_cds.py  learn_infer.py  learn_model.py  mappability_compute.py  mappability_generate.py  ribohmm_main.py
ribohmm/contrib/: bam_to_tbi.py  load_data.py
ribohmm/core/: infer_CDS.py  learn_model.py  ribohmm.py  seq.py
test_data/: riboseq.test.bam  riboseq.test.bam.bai
tests/: test_rmse.py
unit_tests/: test_refactor.py
verification_tests/: test_inference_v1.py
