[project]
name = "RiboHMM"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pysam>=0.23.3",
]

[project.scripts]
ribohmm = "ribohmm:execute_from_command_line"
ribohmm-utils = "ribohmm:execute_utils_from_command_line"
