[build-system]
requires = ["setuptools >= 65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RiboHMM"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxopt>=1.3.2",
    "dill>=0.4.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pysam>=0.23.3",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
]

[project.scripts]
ribohmm = "ribohmm:execute_from_command_line"
ribohmm-utils = "ribohmm:execute_utils_from_command_line"

[tool.setuptools]
packages = ["ribohmm", "ribohmm._cmds", "ribohmm.contrib", "ribohmm.core", "ribohmm.include"]
